--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>               
-    <div id='todoist'></div>
+    <div id="todoist"> </div>
     <script src="build.js"></script>
   </body>
 </html>
